Урок Идентификаторы и классы

--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <titel> Название страницы </titel>
-        <link rel="stylesheet" href="style.scc">
+        <title> Название страницы </title>
+        <link rel="stylesheet" href="style.css">
     </head>
     
     <body>
-        <p>Мой первый параграф</p>  
+        <div id="page">
+            <p class="strong-red">Красный жирный параграф 1</p>
+            <p class="strong-red">Красный жирный параграф 2</p>
+            <p class="light-blue">Голубой легкий параграф 1</p>
+            <p class="light-blue">Голубой легкий параграф 2</p>
+        </div>
+        
     </body>
 </html>
