--- a/index4.html
+++ b/index4.html
@@ -6,7 +6,7 @@
 	
 	</head>
 <body>
-	<Script Language="JavaScript">
+	<Script language="JavaScript">
 	//Скрипт отмечает точную дату и время вашего прибытия на страницу
 	Now=new Date();
 		document.write("Сегодня"+Now.getDate()+"-"+Now.getMonth()+"-"+Now.getFullYear()+".Вы зашли на мою страницу ровно в:"+Now.getHours()+":"+Now.getMinutes()+"и"+Now.getSeconds()+"секунд.")
