--- a/1.html
+++ b/1.html
@@ -2,15 +2,20 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<title>Изучаем язык Javascript</title>
+		<title>Изучаем CSS</title>
 	
 	</head>
-<body>
-	<h1>Клиентский JavaScript</h1>
-	<script>
-	for (var i=1;i<10; i++){document.write(i+"<br>");
-	};
-	</script>
+<body style="background-color:#f0f089">
+	<h1>CSS</h1>
+	<p style="color:#0000ff";font-size:18px>В  этой главе речь пойдет о том, как внедрить CSS в документ HTML, то есть связать стилевое описание элемента непосредственно с самим элементом, каким либо HTML тегом.</p>
+	<h2 style="color:#ea500c"> Купить  слона !</h2>
+	<p> О том, что это такое странное мы написали, постараюсь <strong>подробно</strong> рассказать в <i><strong>последующих</strong></i> главах этого учебника том.
+		<h2 style="color:#2a650a">Используйте атрибут <big> style </big>   для какого либо элемента если этот элемент с отличным от других элементов стилем один единственный на всём сайте
+			
+		</h2>
+		
+	</p>	
+	
 </body>
 	
 
