--- a/index14.html
+++ b/index14.html
@@ -8,11 +8,12 @@
 
 <body>
 	<script type="text/javascript">
-	var x=9;
-	var y=5;
-	var z=7;
-	var abc=2;
-	document.write("x= " + x + "<br/>y= " + y + "<br/>z" + z + "<br/>abc" + abc);
+	var x = 9;
+	var y = 5;
+	var z = 7;
+	var abc = 2;
+	document.write("x= "+ x +"<br/>y = "+ y +"<br/>z="+z+"<br/>abc="+abc); 
+	
 	</script>
 
 
