--- a/index14.html
+++ b/index14.html
@@ -12,8 +12,8 @@
 	var y = 5;
 	var z = 7;
 	var abc = 2;
-	document.write("x= "+ x +"<br/>y = "+ y +"<br/>z="+z+"<br/>abc="+abc); 
-	
+	 
+	document.write("x = 9<br/>y = 5<br/>z = 7<br/>abc = 2");
 	</script>
 
 
