--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8"/>
-		<title>РР·СѓС‡Р°РµРј CSS </title>
-	<link type="text/css" rel="stylesheet" href="my-style.css"/>
-	</head>
-<body>
-	<p>РњРѕР№ РїРµСЂРІС‹Р№ РїР°СЂР°РіСЂР°С„</p>
-</body>
-	<div id="block">
-		<h>Р—Р°РіРѕР»РѕРІРѕРє</h>
-		<p class="text">РљР°РєРѕР№-С‚Рѕ С‚РµРєСЃС‚</p>
-		<p class="text2">РљР°РєРѕР№-С‚Рѕ С‚РµРєСЃС‚</p>
-		<p class="text">РљР°РєРѕР№-С‚Рѕ С‚РµРєСЃС‚</p>
-		<p class="text2">РљР°РєРѕР№-С‚Рѕ С‚РµРєСЃС‚</p>
-	</div>
-<div id="block2">
-		<h>Р—Р°РіРѕР»РѕРІРѕРє</h>
-		<p class="text">РљР°РєРѕР№-С‚Рѕ С‚РµРєСЃС‚</p>
-		<p class="text2">РљР°РєРѕР№-С‚Рѕ С‚РµРєСЃС‚</p>
-		<p class="text">РљР°РєРѕР№-С‚Рѕ С‚РµРєСЃС‚</p>
-		<p class="text2">РљР°РєРѕР№-С‚Рѕ С‚РµРєСЃС‚</p>
-	</div>
-
+	<title>Первый сценарий в документе</title>
 	
 
+	</head>
+
+	<body>
+
+		<p>Страница, содержащая сценарий.</p>
+		
+	<script>
+		<!--
+
+	var a=8; h=10
+	
+	document.write("Площадь прямоугольного треугольника равна ", a*h/2,"." )
+
+	//-->
+ 
+	</script>
+
+	
+		
+ 
+		<p>Конец формирования страницы, содержащей  сценарий</p>
+
+
+	</body>
 </html>
