Читаю передираю,пытаюсь понять

--- a/index_12.html
+++ b/index_12.html
@@ -31,7 +31,7 @@
 
 		else {
 
-		Str2 = window/prompt("Вычисление суммы двух чисел\nВведите число 2","");
+		Str2 = window.prompt("Вычисление суммы двух чисел\nВведите число 2","");
 
 		if (Str2==null){
 
@@ -46,7 +46,7 @@
 
 		msg += Str1 + " и " + Str2 + "равно";
 
-		msg += Sum + "<br><br>";
+		msg += Sum1 + "<br><br>";
 
 		Sum2 = parseInt(Str1) + parseInt(Str2);
 
